--- a/FitTrack/app/src/main/res/values/strings.xml
+++ b/FitTrack/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="botonFiltrar">Filtrar</string>
     <string name="botonPerfil">Perfil</string>
     <string name="botonReproducir">Reproducir</string>
+    <string-array name="userType">
+        <item>User</item>
+        <item>Trainer</item>
+    </string-array>
 </resources>
