Añadir el MainActivity para Trainer, hacer la modificacion (poner fondo, textView, Buscador para el filtrado, en la actividadTrainer y actualizar algunas cosas del MainActivityProfile y Workouts, y también añadir 3 strings mas en ingles y español)

--- a/FitTrack/app/src/main/res/values-es/strings.xml
+++ b/FitTrack/app/src/main/res/values-es/strings.xml
@@ -21,6 +21,9 @@
     <string name="buttonFilter">Filtro</string>
     <string name="buttonProfile">Perfil</string>
     <string name="buttonReproduce">Reproducir</string>
+    <string name="buttonAdd">Añadir</string>
+    <string name="buttonEliminate">Eliminar</string>
+    <string name="buttonUpdate">Modificar</string>
     <string-array name="changeLanguage">
         <item>Inglés</item>
         <item>Español</item>
