--- a/FitTrack/app/src/main/res/values/strings.xml
+++ b/FitTrack/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="buttonFilter">Filter</string>
     <string name="buttonProfile">Profile</string>
     <string name="buttonReproduce">Reproduce</string>
+    <string name="buttonAdd">Add</string>
+    <string name="buttonEliminate">Eliminate</string>
+    <string name="buttonUpdate">Update</string>
     <string-array name="changeLanguage">
         <item>English</item>
         <item>Spanish</item>
