Parte entrenador terminada

--- a/FitTrack/app/src/main/res/values-es/strings.xml
+++ b/FitTrack/app/src/main/res/values-es/strings.xml
@@ -28,6 +28,7 @@
     <string name="workout">Workout</string>
     <string name="level">Nivel: </string>
     <string name="exercises">Ejercicios: </string>
+    <string name="video">Video: </string>
     <string-array name="userType">
         <item>Usuario</item>
         <item>Entrenador</item>
